<resources>
    <string name="app_name">Wagba</string>
    <string name="btn_log">Login</string>
    <string name="text_mail">Enter your e-mail</string>
    <string name="btn_sign">Signup</string>
    <string name="text_pass">******</string>

    <string name="title_activity_logged">LoggedActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_recycler_food_text">Popular Foods</string>
    <string name="menu_recycler_rest_text">Restaurants</string>
    <string name="order_history_label_text">Order History</string>
    <string name="order_boiler_string">Your order from</string>
    <string name="add_items_string">Add Items</string>
    <string name="remove_items_string">Remove all</string>
    <string name="text_name">Enter your name</string>
    <string name="text_phone">Enter your phone number</string>
    <string name="order_history_id_text">Order Number 1</string>
    <string name="order_history_price_text">480.09 EGP</string>
    <string name="rest_name_text">KFC</string>
    <string name="order_menu_history_text">Order History</string>
    <string name="track_menu_order_text">Track Order</string>
    <string name="profile_menu_text">Profile</string>
    <string name="logout_menu_text">Logout</string>
    <string name="order_details_text">Order details</string>
    <string name="order_item_name">Order_item_name</string>
    <string name="order_quantity">x1</string>
    <string name="order_item_price">42.00 EGP</string>
    <string name="check_out_text">Check out</string>
    <string name="your_name_label_text">Your Name</string>
    <string name="your_name_value_text">Adel Asaad</string>
    <string name="your_e_mail_label_text">Your E-mail</string>
    <string name="your_e_mail_value_text">18P2949@eng.asu.edu.eg</string>
    <string name="your_phone_label_text">Your Phone</string>
    <string name="your_phone_value_text">01555427028</string>
    <string name="your_password_label_text">Your Password</string>
    <string name="your_password_value_text">123456</string>
    <string name="uid_label_text">UID</string>
    <string name="uid_value_text">ex.id</string>
    <string name="order_status_value_text">Order Status</string>
    <string name="cancel_order_btn_text">Cancel Order</string>
    <string name="menu_item_title_text">Menu_item_title</string>
    <string name="menu_item_description">Menu_item_description</string>
    <string name="menu_item_price">$Menu_item_price</string>
    <string name="payment_details_text">Payment details</string>
    <string name="subtotal_label_text">Subtotal</string>
    <string name="subtotal_value_text">84.00 EGP</string>
    <string name="tax_label_text">Tax</string>
    <string name="tax_value_text">0.00 EGP</string>
    <string name="delivery_fees_label_text">Delivery fees</string>
    <string name="delivery_fees_value_text">10.00 EGP</string>
    <string name="total_label_text">Total</string>
    <string name="total_value_text">94.00 EGP</string>
</resources>