<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/myId"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/profile_menu_text"/>
        <item
            android:id="@+id/nav_track_btn"
            android:icon="@drawable/ic_baseline_delivery_dining_24"
            android:title="@string/track_menu_order_text"/>
        <item
            android:id="@+id/nav_history_btn"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/order_menu_history_text"/>
        <item
            android:id="@+id/nav_signout_btn"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/logout_menu_text"/>
    </group>
</menu>