<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/layout_border"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/order_price_boiler_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="16dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/payment_details_text"
        />

    <TextView
        android:id="@+id/order_price_subtotal_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtotal_label_text"
        app:layout_constraintTop_toBottomOf="@+id/order_price_boiler_text"
        app:layout_constraintStart_toStartOf="@+id/order_price_boiler_text"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/order_price_subtotal_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/order_price_subtotal_text"
        app:layout_constraintBottom_toBottomOf="@id/order_price_subtotal_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
        android:text="@string/subtotal_value_text"
        android:textSize="14sp"
        android:textColor="@color/black"/>


    <TextView
        android:id="@+id/order_price_tax_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tax_label_text"
        app:layout_constraintTop_toBottomOf="@+id/order_price_subtotal_text"
        app:layout_constraintStart_toStartOf="@+id/order_price_subtotal_text"
        android:layout_marginTop="10dp"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/order_price_tax_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/order_price_tax_text"
        app:layout_constraintBottom_toBottomOf="@id/order_price_tax_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
        android:text="@string/tax_value_text"
        android:textSize="12sp"
        />

    <TextView
        android:id="@+id/order_price_dfee_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery_fees_label_text"
        app:layout_constraintTop_toBottomOf="@+id/order_price_tax_text"
        app:layout_constraintStart_toStartOf="@+id/order_price_tax_text"
        android:layout_marginTop="10dp"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/order_price_dfee_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/order_price_dfee_text"
        app:layout_constraintBottom_toBottomOf="@id/order_price_dfee_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
        android:text="@string/delivery_fees_value_text"
        android:textSize="12sp"
        />

    <TextView
        android:id="@+id/order_price_total_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_label_text"
        app:layout_constraintTop_toBottomOf="@+id/order_price_dfee_text"
        app:layout_constraintStart_toStartOf="@+id/order_price_dfee_text"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/order_price_total_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/order_price_total_text"
        app:layout_constraintBottom_toBottomOf="@id/order_price_total_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
        android:text="@string/total_value_text"
        android:textSize="14sp"
        android:textColor="@color/black"
        />

</androidx.constraintlayout.widget.ConstraintLayout>