<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/list_item_order_item_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_quantity"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />
    <TextView
        android:id="@+id/list_item_order_item_name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/order_item_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/list_item_order_item_quantity"
        app:layout_constraintTop_toTopOf="@id/list_item_order_item_quantity"
        app:layout_constraintStart_toEndOf="@+id/list_item_order_item_quantity"
        android:layout_marginStart="16dp"/>
    <TextView
        android:id="@+id/list_item_order_item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/list_item_order_item_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="12dp"
        app:layout_constraintTop_toTopOf="@id/list_item_order_item_name"
        android:text="@string/order_item_price"
        android:textColor="@color/black"
        android:textSize="16sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>