<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:backgroundTintMode="src_over"
    tools:context=".ui.fragments.body.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_img_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_baseline_person_black_24"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/profile_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="@+id/profile_img_card"
        app:layout_constraintBottom_toBottomOf="@id/profile_img_card"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/your_name_label_text"
        android:textColor="@color/black"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/profile_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/profile_name_label"
        app:layout_constraintStart_toStartOf="@+id/profile_name_label"
        app:layout_constraintEnd_toEndOf="@id/profile_name_label"
        android:layout_marginTop="16dp"
        android:text="@string/your_name_value_text"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="15sp"
        />

    <View
        android:id="@+id/profile_name_border"
        android:layout_width="300dp"
        android:layout_height="1dp"

        android:background="#898989"
        app:layout_constraintTop_toBottomOf="@id/profile_name_text"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@id/profile_name_text"
        app:layout_constraintEnd_toEndOf="@id/profile_name_text"/>

    <TextView
        android:id="@+id/profile_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/profile_name_border"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/your_e_mail_label_text"
        android:textColor="@color/black"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/profile_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/profile_email_label"
        app:layout_constraintStart_toStartOf="@+id/profile_email_label"
        app:layout_constraintEnd_toEndOf="@id/profile_email_label"
        android:layout_marginTop="16dp"
        android:text="@string/your_e_mail_value_text"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="15sp"
        />

    <View
        android:id="@+id/profile_email_border"
        android:layout_width="300dp"
        android:layout_height="1dp"

        android:background="#898989"
        app:layout_constraintTop_toBottomOf="@id/profile_email_text"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@id/profile_email_text"
        app:layout_constraintEnd_toEndOf="@id/profile_email_text"/>

    <TextView
        android:id="@+id/profile_phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/profile_email_border"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/your_phone_label_text"
        android:textColor="@color/black"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/profile_phone_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/profile_phone_label"
        app:layout_constraintStart_toStartOf="@+id/profile_phone_label"
        app:layout_constraintEnd_toEndOf="@id/profile_phone_label"
        android:layout_marginTop="16dp"
        android:text="@string/your_phone_value_text"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="15sp"
        />

    <View
        android:id="@+id/profile_phone_border"
        android:layout_width="300dp"
        android:layout_height="1dp"

        android:background="#898989"
        app:layout_constraintTop_toBottomOf="@id/profile_phone_text"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@id/profile_phone_text"
        app:layout_constraintEnd_toEndOf="@id/profile_phone_text"/>

    <TextView
        android:id="@+id/profile_pass_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/profile_phone_border"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/your_password_label_text"
        android:textColor="@color/black"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/profile_pass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/profile_pass_label"
        app:layout_constraintStart_toStartOf="@+id/profile_pass_label"
        app:layout_constraintEnd_toEndOf="@id/profile_pass_label"
        android:layout_marginTop="16dp"
        android:text="@string/your_password_value_text"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="15sp"
        />

    <View
        android:id="@+id/profile_pass_border"
        android:layout_width="300dp"
        android:layout_height="1dp"

        android:background="#898989"
        app:layout_constraintTop_toBottomOf="@id/profile_pass_text"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@id/profile_pass_text"
        app:layout_constraintEnd_toEndOf="@id/profile_pass_text"/>

    <TextView
        android:id="@+id/profile_id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/profile_pass_border"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/uid_label_text"
        android:textColor="#6E780B"
        android:textStyle="bold"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/profile_id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/profile_id_label"
        app:layout_constraintStart_toStartOf="@+id/profile_id_label"
        app:layout_constraintEnd_toEndOf="@id/profile_id_label"
        android:layout_marginTop="16dp"
        android:text="@string/uid_value_text"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="14sp"
        />

    <View
        android:id="@+id/profile_id_border"
        android:layout_width="300dp"
        android:layout_height="1dp"

        android:background="#898989"
        app:layout_constraintTop_toBottomOf="@id/profile_id_text"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@id/profile_id_text"
        app:layout_constraintEnd_toEndOf="@id/profile_id_text"/>

    <android.widget.Button
        android:id="@+id/profile_btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/round_button_red_dark"
        android:text="Logout"
        android:textColor="@color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="36dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>