<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_centerHorizontal="true"
    app:cardCornerRadius="40dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/menu_item_img_card"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1">

            <ImageView
                android:layout_height="80dp"
                android:layout_width="80dp"
                android:id="@+id/menu_item_img"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/menu_item_example2"/>

        </androidx.cardview.widget.CardView>

        <android.widget.Button
            android:id="@+id/menu_item_add_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="@id/menu_item_price_text"
            app:layout_constraintBottom_toBottomOf="@id/menu_item_price_text"
            app:layout_constraintEnd_toEndOf="@id/menu_item_img_card"
            app:layout_constraintStart_toStartOf="@id/menu_item_img_card"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ic_baseline_add_circle_outline_24"/>

        <TextView
            android:id="@+id/menu_item_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_item_title_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15" />
        <TextView
            android:id="@+id/menu_item_desc_text"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:text="@string/menu_item_description"
            android:textColor="#606060"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />
        <TextView
            android:id="@+id/menu_item_price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_item_price"
            android:textColor="#FF0000"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.085"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.87" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>